--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ matrix:
         - clang
         - gcc
       script:  
-        - gcc -o calculator calculator.c 
-        - ./calculator
+        - gcc -o assert assert.c 
+        - ./assert
